--- a/washers/index.html
+++ b/washers/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>washers</title>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600i,700,800&amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
